--- a/TutorialThymeleaf/src/main/resources/templates/confirm.html
+++ b/TutorialThymeleaf/src/main/resources/templates/confirm.html
@@ -5,8 +5,7 @@
     <title>Tutorial of Thymeleaf</title>
 </head>
 <body>
-        <h1>Thymeleaf Page</h1>
+    <h1>Thymeleaf Page</h1>
+    <p th:text="'入力された値は「' +${val}+'」 です。'"></p>
 </body>
 </html>
-
-    
