--- a/TutorialThymeleaf/src/main/resources/templates/msg.html
+++ b/TutorialThymeleaf/src/main/resources/templates/msg.html
@@ -5,8 +5,7 @@
     <title>Tutorial of Thymeleaf</title>
 </head>
 <body>
-        <h1>Thymeleaf Page</h1>
+    <h1 th:text="#{content.title}">Thymeleaf Page</h1>
+    <p th:text="#{content.message}"></p>
 </body>
 </html>
-
-    
