--- a/TutorialThymeleaf/src/main/resources/templates/now.html
+++ b/TutorialThymeleaf/src/main/resources/templates/now.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <title>Tutorial of Thymeleaf</title>
 </head>
+
 <body>
-        <h1>Thymeleaf Page</h1>
+    <h1>Thymeleaf</h1>
+    <p th:text="${msg}"></p>
 </body>
 </html>
-
-    
